--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Nashville Software School</title>
+  <title>My Favorite Dinosaur</title>
   <link rel="stylesheet" href="./favoriteDino.css">
 
 </head>
