added color and name and date

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <footer></footer>
   </article>
 
-  <footer></footer>
-
   <script src="./doll.js"></script>
 </body>
+<footer>Abbey Brown. June 5, 2020</footer>
 </html>
