picture and description of me

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 
 <body>
-  <nav></nav>
 
-  <header></header>
-
-  <article class="dollListing">
-    <header></header>
-    <section></section>
+  <header class="header">Abbey Brown</header>
+  
+  <article class="cardOne">
+    
+    <section class="aboutMe">
+      <img src="/me2020.jpg"/>
+      <p>Hi my name is Abbey. Relearning coding.</p>
+    </section>
     <footer></footer>
   </article>
 
