--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="aboutMe">
       <img src="/me2020.jpg" id="me"/>
       <p class="header">Abbey Brown</p>
-      <p>Hi, my name is Abbey. I am junior instructor for Nashville Software School evening cohort 13. Huzzah!</p>
+      <p>Hi, my name is Abbey. I am a junior instructor for Nashville Software School evening cohort 13. Huzzah!</p>
     </section>
   </article>
 
